--- a/2.Valores Compuestos/funciones.html
+++ b/2.Valores Compuestos/funciones.html
@@ -72,9 +72,9 @@
 
         //Función Expresada o anonima
         const funcionExpresada = function(){
-            console.log("Esto es una función expresada, es decir, una función que se le ha asginado como valor a una variable, si invocamos esta función antes de su definición JS nos dirá....")
+            console.log("Esto es una función expresada, es decir, una función que se le ha asginado como valor a una variable, si invocamos esta función antes de su definición JS nos dirá 'Cannot access 'funcionExpresada' before initializacion' ")
         }
-        
+
         funcionExpresada();
 
     </script>
