Estructuras de control:condicionales

--- a/2.Valores Compuestos/tipos_operadores.html
+++ b/2.Valores Compuestos/tipos_operadores.html
@@ -61,6 +61,16 @@
         --i;
         console.log(i);
 
+        /*  Lógico
+        ! - Not:Niega, es decir lo que es verdadero lo vuelve falso y viceversa
+        || - Or: Cuando tengo 2 o más condiciones, con que una se cumpla, es decir sea verdadera, el OR será verdadero
+        && - And: Cuando tengo 2 o más condiciones, todas tienen que cumplirse, es decir ser verdaderas para que AND se valide 
+        */
+
+        console.log(!true); //false (Not)
+        console.log(9 === 9 || ("9" === 9));
+        console.log((9 === 9) && ("9" === 9));
+
     </script>
 </body>
 </html>
