--- a/3.Estructura de Control/condicionales.html
+++ b/3.Estructura de Control/condicionales.html
@@ -39,6 +39,86 @@
         }else{
             console.log("Eres menor de edad");
         }
-    </script>
+
+        /* if--else if---else */
+        /*
+        Déjame Dormir - 0hr - 5 hrs
+        Buenos días 6hrs - 11hrs
+        Buenas tardes 12hrs - 18hrs
+        Buenas noches 19hrs - 23hrs
+        */
+
+        //If anidados con operadores compuestos
+        let hora = 4;
+
+        if(hora >= 0 && hora <= 5){
+            console.log("Déjame dormir");
+        }else if(hora >= 6 && hora <= 11){
+            console.log("Buenos días");
+        }else if(hora >= 12 && hora <= 18){
+            console.log("Buenas tardes");
+        }else{
+            console.log("Buenas noches");
+        }
+
+        if(hora < 6){
+            console.log("Déjame dormir");
+        }else if(hora > 5 && hora < 12){
+            console.log("Buenos días");
+        }else if(hora > 11 && hora < 19){
+            console.log("Buenas tardes");
+        }else{
+            console.log("Buenas noches");
+        }
+
+        /*Operador Ternario (condición) ? verdadero: falsa*/
+        console.log("Operador Ternario");
+
+        let eresMayor = (edad >= 18)
+        ? "Eres mayor de edad" 
+        : "Eres menor de Edad"
+
+        console.log(eresMayor);
+
+        /* switch - case (diferentes valores para una misma variable )*/
+
+        /*
+        domingo - 0
+        lunes - 1 
+        martes - 2
+        miercoles - 3
+        jueves - 4
+        viernes - 5
+        sabádo - 6
+        */
+       let dia = 6;
+
+     switch (dia) {
+        case 0:
+            console.log("Domingo");
+            break;
+        case 1:
+            console.log("Lunes");
+            break;
+        case 2:
+            console.log("Martes");
+            break;
+        case 3: 
+            console.log("Miercoles");
+            break;
+        case 4:
+            console.log("Jueves");
+            break;
+        case 5:
+            console.log("Viernes");
+            break;
+        case 6:
+            console.log("Sábado");
+            break
+        default:
+            console.log("El día no existe");
+            break;
+     };
+    </script>   
 </body>
 </html>
