--- a/3.Estructura de Control/destructuracion.html
+++ b/3.Estructura de Control/destructuracion.html
@@ -31,6 +31,20 @@
         const [one, two, three] = numeros;
 
         console.log(one, two, three);
+
+
+        const persona = {
+            nombre: "Ile",
+            apellido: "Chamorro",
+            edad: 18
+        }
+
+
+        //destructuración objetos
+        let {nombre, apellido, edad} = persona;
+
+
+        console.log(nombre, apellido, edad);
     </script>
 </body>
 </html>
