--- a/4.Programación Orientada a Objetos/objeto.console.html
+++ b/4.Programación Orientada a Objetos/objeto.console.html
@@ -90,7 +90,14 @@
             console.log(i);
         }
 
+        console.clear();
     
+        //test
+        let x = 8,
+        y = 3,
+        pruebaXY = "Se espera que X siempre sea menor que Y";
+
+        console.assert(x < y, {x,y,pruebaXY})
     </script>
 </body>
 </html>
