--- a/5.Objetos y Funciones del Lenguaje/funciones_anonimas.html
+++ b/5.Objetos y Funciones del Lenguaje/funciones_anonimas.html
@@ -11,8 +11,41 @@
 
 
     <script>
-        //Función en la cual englobas todo el codigo a ejecutar
+        //Función Anónima Auto ejecutable 
+        (function(){
+            console.log("Mi primer IIFE");
+        })();
 
+
+        (function(d, w, c){
+            console.log("Mi segunda IIFE");
+            console.log(d);
+            console.log(w);
+            console.log(c);
+            c.log("Este es un console.log");
+        })(document, window, console);
+
+
+        //Formas de escribir las funciones Anónimas Autoejecutables
+        (function(){
+            console.log("versión Clásica")
+        })();
+
+        //La Crockford (Javascript The Good Parts)
+        ((function(){
+            console.log("versión Crockford")
+        })());
+
+        //Unaria 
+        +function(){
+            console.log("versión Unaria")
+        }();
+
+        //Facebook
+        !function(){
+            console.log("versión Facebook")
+        }();
+        //alert("Hola");
 
     </script>
 </body>
