Ejercicios de Programación 2

--- a/6.Ejercicios de Lógica de Programación/ejercicios_1.html
+++ b/6.Ejercicios de Lógica de Programación/ejercicios_1.html
@@ -22,7 +22,19 @@
         }    
 
         console.log(cadena.slice(0, 4));
-        
+        //2)Programa una función que te devuelve el texto recortado según el número de caracteres indicados pe. miFuncion("Hola Mundo", 4) devolverá "Hola"
+
+        const recortarTexto = (cadena = "", longitud = undefined) => 
+        (!cadena)
+        ? console.warn("No ingresaste una cadena de texto")
+        :(longitud === undefined)
+        ? console.warn("No ingresaste la longitud para recortar el texto")
+        : console.info(cadena.slice(0, longitud))
+
+
+        recortarTexto("Hola Mundo", 4);
+        recortarTexto();
+
 
     </script>
 </html>
