--- a/6.Ejercicios de Lógica de Programación/ejercicios_1.html
+++ b/6.Ejercicios de Lógica de Programación/ejercicios_1.html
@@ -7,6 +7,8 @@
     <title>Ejercicios Lógica de Programación</title>
 </head>
 <body>
+
+    <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, non. Nihil incidunt quisquam vitae ullam nemo asperiores iste necessitatibus illum!</h1>
 </body>
     <script>
         /*1)Programa una función que cuente el número de caracteres de una cadena de texto, pe.miFunción("Hola Mundo") devolverá 10
@@ -35,6 +37,36 @@
         recortarTexto("Hola Mundo", 4);
         recortarTexto();
 
+        //3 Programa una función que dada una string te devuelva un Array de textos separados por cierto caracter, pe. miFuncion('hola que tal', '') devolverá ['hola', 'que', 'tal']
+
+        const cadenaAArreglo = (cadena = "", separador = undefined) => (!cadena)
+        ? console.warn("No ingresaste una cadena de texto")
+        : (separador === undefined)
+        ? console.warn("No ingresaste el caracter separador")
+        : console.info(cadena.split(separador));
+
+        cadenaAArreglo("Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, non. Nihil incidunt quisquam vitae ullam nemo asperiores iste necessitatibus illum!", "");
+
+
+        //4) Programa una función que repita un texto X veces, pe. miFuncion('Hola Mundo', 3) devolverá Hola Mundo Hola Mundo Hola Mundo
+
+        const repetirTexto = (texto = "", veces = undefined) => {
+        if(!texto) return console.warn("No ingresaste un texto");
+
+
+        if(veces === undefined) return console.warn("No ingresaste el número de veces a repetir el texto");
+
+        if (veces === 0) return console.error("El número de veces no puede ser 0");
+
+        if(Math.sign(veces) === -1) return console.error("El número de veces no puede ser negativo");
+
+
+        for(let i= 1; i <= veces; i++){
+            console.info(`${texto}, ${i}`);
+        }
+    }
+
+    repetirTexto("Hola Mundo", 3);
 
     </script>
 </html>
