DOM:Estilos y VariablesCSS

--- a/11.DOM/Web_Apis.html
+++ b/11.DOM/Web_Apis.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web APIs</title>
+    <style>
+        :root{
+            --yellow-color: #F7DF1E;
+            --dark-color: #222;
+        }
+    </style>
 </head>
 <body>
     <!--
@@ -55,7 +61,7 @@
     </nav>
     <input type="text" name="nombre" placeholder="Nombre">
     <!--Data-Attributes - Atributos Propios -->
-    <a class="link-dom" href="Web_Apis.html" data-id="1" data-description="Document Object Model">DOM</a>
+    <a class="link-dom" href="Web_Apis.html" style="background-color: #F7DF1E; color: #222;" data-id="1" data-description="Document Object Model">DOM</a>
     <section class="cards">
         <figure class="card">
             <img src="https://placeimg.com/200/200/tech" alt="Tech">
