DOM:Eventos con Parámetros y Remover Eventos

--- a/11.DOM/Web_Apis.html
+++ b/11.DOM/Web_Apis.html
@@ -104,6 +104,8 @@
     <!--Tercera Manera Evento multiple-->
     <br><br>
     <button id="evento-multiple">Evento con Manejador Multiple</button>
+    <br><br>
+    <button id="evento-remover">Removiendo eventos con manejadores múltiples</button>
     <script src="./dom.js">
         
     </script>
