DOM:Flujo de Eventos (Burbuja y Captura)

--- a/11.DOM/Web_Apis.html
+++ b/11.DOM/Web_Apis.html
@@ -106,6 +106,23 @@
     <button id="evento-multiple">Evento con Manejador Multiple</button>
     <br><br>
     <button id="evento-remover">Removiendo eventos con manejadores múltiples</button>
+    <br><br>
+    <h4>Flujo de Eventos</h4>
+    <section class="eventos-flujo">
+        <div class="uno">
+            1
+            <div class="dos">
+                2
+                <div class="tres">
+                    3
+                </div>
+            </div>
+        </div>
+    </section>
+    <br>
+    <br>
+    <br>
+    <br>
     <script src="./dom.js">
         
     </script>
