--- a/11.DOM/Web_Apis.html
+++ b/11.DOM/Web_Apis.html
@@ -120,6 +120,7 @@
             </div>
         </div>
     </section>
+    <h3 style="width: 2000px">Manejo del BOM</h3>
     <br>
     <br>
     <br>
@@ -127,5 +128,6 @@
     <script src="./dom.js">
         
     </script>
+    <script src="./dom_dos.js"></script>
 </body>
 </html>
