--- a/11.DOM/Web_Apis.html
+++ b/11.DOM/Web_Apis.html
@@ -121,6 +121,17 @@
         </div>
     </section>
     <h3 style="width: 2000px">Manejo del BOM</h3>
+    <button id="abrir-ventana">
+        Abrir Ventana
+    </button>
+    <br>
+    <button id="cerrar-ventana">
+        Cerrar Ventana
+    </button>
+    <br>
+    <button id="imprimir-ventana">
+        Imprimir Ventana
+    </button>
     <br>
     <br>
     <br>
