--- a/12.Ejercicios_dom/index.html
+++ b/12.Ejercicios_dom/index.html
@@ -28,19 +28,19 @@
             </nav>
         </aside>
         <main>
-            <section id="#sección1" class="section">
+            <section id="seccion1" class="section">
                 <h2>Sección 1</h2>
             </section>
-            <section id="#sección2" class="section">
+            <section id="seccion2" class="section">
                 <h2>Sección 2</h2>
             </section>
-            <section id="#sección3" class="section">
+            <section id="seccion3" class="section">
                 <h2>Sección 3</h2>
             </section>
-            <section id="#sección4" class="section">
+            <section id="seccion4" class="section">
                 <h2>Sección 4</h2>
             </section>
-            <section id="#sección5" class="section">
+            <section id="seccion5" class="section">
                 <h2>Sección 5</h2>
             </section>
         </main>
