DOM: Ejercicios Prácticos | Reloj Digital

--- a/12.Ejercicios_dom/index.html
+++ b/12.Ejercicios_dom/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-ar">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,7 @@
       </button>
         <aside class="panel">
             <nav class="menu">
-                <a href="#sección1">Sección 1</a>
+                <a href="#sección1">Reloj Digital y Alarma Sonora</a>
                 <a href="#sección2">Sección 2</a>
                 <a href="#sección1">Sección 3</a>
                 <a href="#sección1">Sección 4</a>
@@ -29,7 +29,15 @@
         </aside>
         <main>
             <section id="seccion1" class="section">
-                <h2>Sección 1</h2>
+                <h2>Reloj Digital y Alarma Sonora</h2>
+                <div id="reloj">
+                    <div>
+                        <button id="activar-reloj">Iniciar Reloj</button>
+                        <button id="desactivar-reloj">Detener Reloj</button>
+                        <button id="activar-alarma">Iniciar Alarma</button>
+                        <button id="desactivar-alarma">Detener Alarma</button>
+                    </div>
+                </div>
             </section>
             <section id="seccion2" class="section">
                 <h2>Sección 2</h2>
@@ -44,6 +52,6 @@
                 <h2>Sección 5</h2>
             </section>
         </main>
-    <script src="./js/script.js" type="module"></script>
+        <script src="./js/index_dom.js" type="module"></script>
 </body>
 </html>
