--- a/12.Ejercicios_dom/index.html
+++ b/12.Ejercicios_dom/index.html
@@ -30,14 +30,13 @@
         <main>
             <section id="seccion1" class="section">
                 <h2>Reloj Digital y Alarma Sonora</h2>
-                <div id="reloj">
+                <div id="reloj"></div>
                     <div>
                         <button id="activar-reloj">Iniciar Reloj</button>
                         <button id="desactivar-reloj">Detener Reloj</button>
                         <button id="activar-alarma">Iniciar Alarma</button>
                         <button id="desactivar-alarma">Detener Alarma</button>
                     </div>
-                </div>
             </section>
             <section id="seccion2" class="section">
                 <h2>Sección 2</h2>
