--- a/12.Ejercicios_dom/index.html
+++ b/12.Ejercicios_dom/index.html
@@ -21,7 +21,7 @@
         <aside class="panel">
             <nav class="menu">
                 <a href="#sección1">Reloj Digital y Alarma Sonora</a>
-                <a href="#sección2">Sección 2</a>
+                <a href="#sección2">Eventos del Teclado</a>
                 <a href="#sección1">Sección 3</a>
                 <a href="#sección1">Sección 4</a>
                 <a href="#sección1">Sección 5</a>
@@ -39,7 +39,7 @@
                     </div>
             </section>
             <section id="seccion2" class="section">
-                <h2>Sección 2</h2>
+                <h2>Eventos del Teclado</h2>
             </section>
             <section id="seccion3" class="section">
                 <h2>Sección 3</h2>
