--- a/12.Ejercicios_dom/index.html
+++ b/12.Ejercicios_dom/index.html
@@ -20,8 +20,8 @@
       </button>
         <aside class="panel">
             <nav class="menu">
-                <a href="#sección1">Reloj Digital y Alarma Sonora</a>
-                <a href="#sección2">Eventos del Teclado</a>
+                <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
+                <a href="#seccion2">Eventos del Teclado</a>
                 <a href="#sección1">Sección 3</a>
                 <a href="#sección1">Sección 4</a>
                 <a href="#sección1">Sección 5</a>
@@ -40,6 +40,9 @@
             </section>
             <section id="seccion2" class="section">
                 <h2>Eventos del Teclado</h2>
+                <article class="stage">
+                    <div class="ball"></div>
+                </article>
             </section>
             <section id="seccion3" class="section">
                 <h2>Sección 3</h2>
