--- a/12.Ejercicios_dom/index.html
+++ b/12.Ejercicios_dom/index.html
@@ -22,7 +22,7 @@
             <nav class="menu">
                 <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
                 <a href="#seccion2">Eventos del Teclado</a>
-                <a href="#sección1">Sección 3</a>
+                <a href="#sección1">Cuenta Regresiva</a>
                 <a href="#sección1">Sección 4</a>
                 <a href="#sección1">Sección 5</a>
             </nav>
@@ -45,7 +45,8 @@
                 </article>
             </section>
             <section id="seccion3" class="section">
-                <h2>Sección 3</h2>
+                <h2>Cuenta Regresiva</h2>
+                <div id="countdown"></div>
             </section>
             <section id="seccion4" class="section">
                 <h2>Sección 4</h2>
