--- a/12.Ejercicios_dom/index.html
+++ b/12.Ejercicios_dom/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es-ar">
+<html lang="es-ar" data-dark>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Ejericios del DOM</title>
 </head>
-<body>
-    <header>
+<body data-dark>
+    <header class="header" data-dark>
         <h1>Ejercicios del DOM</h1>
     </header>
     <button class="panel-btn hamburger hamburger--vortex" type="button">
@@ -56,6 +56,7 @@
             </section>
         </main>
         <button class="scroll-top-btn hidden">&#11014;</button>
+        <button class="dark-theme-btn">🌙</button>
         <script src="./js/index_dom.js" type="module"></script>
 </body>
 </html>
