--- a/12.Ejercicios_dom/index.html
+++ b/12.Ejercicios_dom/index.html
@@ -22,9 +22,14 @@
             <nav class="menu">
                 <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
                 <a href="#seccion2">Eventos del Teclado</a>
-                <a href="#sección1">Cuenta Regresiva</a>
-                <a href="#sección1">Sección 4</a>
-                <a href="#sección1">Sección 5</a>
+                <a href="#sección3">Cuenta Regresiva</a>
+                <a href="#sección4">Responsive con Javascrit</a>
+                <a href="#sección5">Sección 5</a>
+                <a href="#sección5">Sección 6</a>
+                <a href="#sección5">Sección 7</a>
+                <a href="#sección5">Sección 8</a>
+                <a href="#sección5">Sección 9</a>
+                <a href="#sección5">Sección 10</a>
             </nav>
         </aside>
         <main>
@@ -49,10 +54,31 @@
                 <div id="countdown"></div>
             </section>
             <section id="seccion4" class="section">
-                <h2>Sección 4</h2>
+                <h2>Responsive con Javascript</h2>
+                <div id="youtube">
+
+                </div>
+                <div id="gmaps">
+                    
+                </div>
             </section>
             <section id="seccion5" class="section">
                 <h2>Sección 5</h2>
+            </section>
+            <section id="seccion6" class="section">
+                <h2>Sección 6</h2>
+            </section>
+            <section id="seccion7" class="section">
+                <h2>Sección 7</h2>
+            </section>
+            <section id="seccion8" class="section">
+                <h2>Sección 8</h2>
+            </section>
+            <section id="seccion9" class="section">
+                <h2>Sección 9</h2>
+            </section>
+            <section id="seccion10" class="section">
+                <h2>Sección 10</h2>
             </section>
         </main>
         <button class="scroll-top-btn hidden">&#11014;</button>
