--- a/12.Ejercicios_dom/index.html
+++ b/12.Ejercicios_dom/index.html
@@ -22,9 +22,9 @@
             <nav class="menu">
                 <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
                 <a href="#seccion2">Eventos del Teclado</a>
-                <a href="#sección3">Cuenta Regresiva</a>
-                <a href="#sección4">Responsive con Javascrit</a>
-                <a href="#sección5">Sección 5</a>
+                <a href="#seccion3">Cuenta Regresiva</a>
+                <a href="#seccion4">Responsive con Javascrit</a>
+                <a href="#seccion5">Responsive Tester</a>
                 <a href="#sección5">Sección 6</a>
                 <a href="#sección5">Sección 7</a>
                 <a href="#sección5">Sección 8</a>
@@ -62,10 +62,20 @@
                     
                 </div>
             </section>
-            <section id="seccion5" class="section">
-                <h2>Sección 5</h2>
+            <section id="sección5" class="section">
+                <h2>Responsive Tester</h2>
+                <form id="responsive-tester">
+                    <input type="url" name="direccion" placeholder="URL" required>
+                    <br>
+                    <input type="text" name="ancho" placeholder="Ancho" required>
+                    <br>
+                    <input type="text" name="alto" placeholder="Alto" required>
+                    <br>
+                    <input type="submit" name="probar" value="Probar">
+                    <input type="button" name="cerrar" value="Cerrar">
+                </form>
             </section>
-            <section id="seccion6" class="section">
+            <section id="sección6" class="section">
                 <h2>Sección 6</h2>
             </section>
             <section id="seccion7" class="section">
