--- a/12.Ejercicios_dom/index.html
+++ b/12.Ejercicios_dom/index.html
@@ -25,7 +25,7 @@
                 <a href="#seccion3">Cuenta Regresiva</a>
                 <a href="#seccion4">Responsive con Javascrit</a>
                 <a href="#seccion5">Responsive Tester</a>
-                <a href="#sección5">Sección 6</a>
+                <a href="#sección5">Detección de Dispositivos</a>
                 <a href="#sección5">Sección 7</a>
                 <a href="#sección5">Sección 8</a>
                 <a href="#sección5">Sección 9</a>
@@ -76,7 +76,8 @@
                 </form>
             </section>
             <section id="sección6" class="section">
-                <h2>Sección 6</h2>
+                <h2>Detección de Dispositivos <br>(User Agent)</h2>
+                <div id="user-device"></div>
             </section>
             <section id="seccion7" class="section">
                 <h2>Sección 7</h2>
