Ajax: API Fetch

--- a/13.AJAX/ajax.html
+++ b/13.AJAX/ajax.html
@@ -82,6 +82,8 @@
   <h2>Objeto XMLHttpRequest</h2>
   <!--Para que todo funcione correctamente en ajax, es necesario ejecutarlo en el protocolo https-->
   <ol id="xhr"></ol>
+  <h2>Api Fetch</h2>
+  <ol id="fetch"></ol>
   <br>
   <br>
   <br>
