--- a/13.AJAX/ajax.html
+++ b/13.AJAX/ajax.html
@@ -87,6 +87,9 @@
   <h2>Api Fetch + Async Await</h2>
   <ol id="fetch-async"></ol>
   <h2>Libreria Axios</h2>
+  <ol id="axios"></ol>
+  <h2>Axios + Async-Await</h2>
+  <ol id="axios-async"></ol>
   <br>
   <br>
   <br>
@@ -97,6 +100,7 @@
   <br>
   <br>
   <br>
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="js/ajax.js"></script>
 </body>
