--- a/assets/crud_ajax.html
+++ b/assets/crud_ajax.html
@@ -17,7 +17,7 @@
                 <input type="text" name="posicion" placeholder="posicion" required>
                 <br>
                 <input type="submit" value="Enviar">
-                <input type="hidden" name="action">
+                <input type="hidden" name="id">
             </form>
         </article>
         <article>
@@ -55,6 +55,59 @@
         $title = d.querySelector(".crud-title"),
         $template = d.getElementById("crud-template").content,
         $fragment = d.createDocumentFragment();
+    
+    
+        const ajax = (options) => {
+            let {url, method, success, error, data} = options;
+            const xhr = new XMLHttpRequest();
+
+            xhr.addEventListener("readystatechange", e => {
+                if(xhr.readyState !== 4) return;
+
+                if(xhr.status >= 200 && xhr.status < 300){
+                    //success
+                    let json = JSON.parse(xhr.responseText);
+                    success(json);
+                }else{
+                    //error
+                    let message = xhr.statusText || "Ocurrió un error";
+                    error(`Error ${xhr.status}: ${message}`);
+                }
+            });
+
+            xhr.open(method || "GET", url);
+            xhr.setRequestHeader("Content-type", "application/json charset=utf-8");
+            xhr.send(JSON.stringify(data));
+        }
+
+        const getAll = () => {
+            ajax({
+                method: "GET",
+                url: "http://localhost:5555/jugadores",
+                success: (res) => {
+                    console.log(res);
+                    res.forEach(el => {
+                        $template.querySelector(".nombre").textContent = el.nombre;
+                        $template.querySelector(".posicion").textContent = el.posicion;
+                        $template.querySelector(".edit").dataset.id = el.id;
+                        $template.querySelector(".edit").dataset.nombre = el.nombre;
+                        $template.querySelector(".edit").dataset.posicion = el.posicion;
+                        $template.querySelector(".delete").dataset.id = el.id;
+
+                        let $clone = d.importNode($template, true);
+                        $fragment.appendChild($clone);
+                    });
+
+                    $table.querySelector("tbody").appendChild($fragment)
+                },
+                error: (err) => {
+                    console.warn(err);
+                    $table.insertAdjacentHTML("afterend", `<p><b>${err}</b></p>`)
+                },
+                data: null
+            })
+        }
+        d.addEventListener("DOMContentLoaded", getAll)
     </script>
 </body>
 </html>
