--- a/assets/crud_fetch.html
+++ b/assets/crud_fetch.html
@@ -49,37 +49,129 @@
         </tr>
     </template>
     <script>
-        const d = document, 
-        $table = d.querySelector(".crud-table"),
-        $form = d.querySelector(".crud-form"),
-        $title = d.querySelector(".crud-title"),
-        $template = d.getElementById("crud-template").content,
-        $fragment = d.createDocumentFragment();
-    
-    
-        const getAll = async () => {
-            try{
-                let res = await fetch("http://localhost:5555/jugadores"),
-                json = await res.json();
+          const d = document,
+      $table = d.querySelector(".crud-table"),
+      $form = d.querySelector(".crud-form"),
+      $title = d.querySelector(".crud-title"),
+      $template = d.getElementById("crud-template").content,
+      $fragment = d.createDocumentFragment();
 
-                if(!res.ok) throw {status: res.status, statusText: res.statusText};
+    const getAll = async () => {
+      try {
+        let res = await fetch("http://localhost:5555/jugadores"),
+          json = await res.json();
 
-                json.forEach(el => {
-                    $template.querySelector(".nombre").textContent = el.nombre;
-                    $template.querySelector(".posicion").textContent = el.posicion;
+        if (!res.ok) throw { status: res.status, statusText: res.statusText };
 
-                    let $clone = d.importNode($template, true);
-                    $fragment.appendChild($clone);
-                });
+        console.log(json);
+        json.forEach(el => {
+          $template.querySelector(".nombre").textContent = el.nombre;
+          $template.querySelector(".posicion").textContent = el.posicion;
+          $template.querySelector(".edit").dataset.id = el.id;
+          $template.querySelector(".edit").dataset.nombre = el.nombre;
+          $template.querySelector(".edit").dataset.posicion = el.posicion;
+          $template.querySelector(".delete").dataset.id = el.id;
 
-                $table.querySelector("tbody").appendChild($fragment);
-            }catch(error){
-                let message = err.statusText || "Ocurrió un error";
-                $table.insertAdjacentHTML("afterend", `<p><b>Error: ${err.status}: ${message}</b></p>`)
-            }
+          let $clone = d.importNode($template, true);
+          $fragment.appendChild($clone);
+        });
+
+        $table.querySelector("tbody").appendChild($fragment);
+      } catch (err) {
+        let message = err.statusText || "Ocurrió un error";
+        $table.insertAdjacentHTML("afterend", `<p><b>Error ${err.status}: ${message}</b></p>`);
+      }
+    }
+
+    d.addEventListener("DOMContentLoaded", getAll);
+
+    d.addEventListener("submit", async e => {
+      if (e.target === $form) {
+        e.preventDefault();
+
+        if (!e.target.id.value) {
+          //Create - POST
+          try {
+            let options = {
+              method: "POST",
+              headers: {
+                "Content-type": "application/json; charset=utf-8"
+              },
+              body: JSON.stringify({
+                nombre: e.target.nombre.value,
+                constelacion: e.target.constelacion.value
+              })
+            },
+              res = await fetch("http://localhost:5555/jugadores", options),
+              json = await res.json();
+
+            if (!res.ok) throw { status: res.status, statusText: res.statusText };
+
+            location.reload();
+          } catch (err) {
+            let message = err.statusText || "Ocurrió un error";
+            $form.insertAdjacentHTML("afterend", `<p><b>Error ${err.status}: ${message}</b></p>`);
+          }
+        } else {
+          //Update - PUT
+          try {
+            let options = {
+              method: "PUT",
+              headers: {
+                "Content-type": "application/json; charset=utf-8"
+              },
+              body: JSON.stringify({
+                nombre: e.target.nombre.value,
+                posicion: e.target.posicion.value
+              })
+            },
+              res = await fetch(`http://localhost:5555/jugadores/${e.target.id.value}`, options),
+              json = await res.json();
+
+            if (!res.ok) throw { status: res.status, statusText: res.statusText };
+
+            location.reload();
+          } catch (err) {
+            let message = err.statusText || "Ocurrió un error";
+            $form.insertAdjacentHTML("afterend", `<p><b>Error ${err.status}: ${message}</b></p>`);
+          }
         }
+      }
+    });
 
-        d.addEventListener("DOMContentLoaded", getAll);
+    d.addEventListener("click", async e => {
+      if (e.target.matches(".edit")) {
+        $title.textContent = "Editar Jugador";
+        $form.nombre.value = e.target.dataset.nombre;
+        $form.posicion.value = e.target.dataset.posicion;
+        $form.id.value = e.target.dataset.id;
+      }
+
+      if (e.target.matches(".delete")) {
+        let isDelete = confirm(`¿Estás seguro de eliminar el id ${e.target.dataset.id}?`);
+
+        if (isDelete) {
+          //Delete - DELETE
+          try {
+            let options = {
+              method: "DELETE",
+              headers: {
+                "Content-type": "application/json; charset=utf-8"
+              }
+            },
+              res = await fetch(`http://localhost:5555/jugadores/${e.target.dataset.id}`, options),
+              json = await res.json();
+
+            if (!res.ok) throw { status: res.status, statusText: res.statusText };
+
+            location.reload();
+          } catch (err) {
+            let message = err.statusText || "Ocurrió un error";
+            alert(`Error ${err.status}: ${message}`);
+          }
+        }
+      }
+    })
     </script>
 </body>
 </html>
