--- a/assets/crud_axios.html
+++ b/assets/crud_axios.html
@@ -1,87 +1,171 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD API REST Fetch</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CRUD API REST AXIOS</title>
 </head>
+
 <body>
-    <h1>CRUD API REST Fetch</h1>
-    <section class="crud">
-        <article>
-            <h2 class="crud-title">Agregar Jugadores</h2>
-            <form class="crud-form">
-                <input type="text" name="nombre" placeholder="nombre" required>
-                <br>
-                <input type="text" name="posicion" placeholder="posicion" required>
-                <br>
-                <input type="submit" value="Enviar">
-                <input type="hidden" name="id">
-            </form>
-        </article>
-        <article>
-            <h2>Ver Jugadores</h2>
-            <table class="crud-table">
-                <thead>
-                    <tr>
-                        <th>Nombre</th>
-                        <th>Posicion</th>
-                        <th>Id</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </article>
-    </section>
-    <template id="crud-template">
-        <tr>
-            <td class="nombre"></td>
-            <td class="posicion"></td>
-            <td>
-                <button class="edit">
-                    Editar
-                </button>
-                <button class="delete">
-                    Eliminar
-                </button>
-            </td>
-        </tr>
-    </template>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <script>
-        const d = documet,
-        $table = d.querySelector(".crud-table"),
-        $form = d.querySelector(".crud-form"),
-        $title = d.querySelector(".crud-title"),
-        $template = d.getElementById("crud-template").content,
-        $fragment = d.createDocumentFragment();
+  <h1>CRUD API REST AXIOS</h1>
+  <section class="crud">
+    <article>
+      <h2 class="crud-title">Agregar Jugador</h2>
+      <form class="crud-form">
+        <input type="text" name="nombre" placeholder="nombre" required>
+        <br>
+        <input type="text" name="jugador" placeholder="jugador" required>
+        <br>
+        <input type="submit" value="Enviar">
+        <input type="hidden" name="id">
+      </form>
+    </article>
+    <article>
+      <h2>Ver Jugadores</h2>
+      <table class="crud-table">
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th>Posicion</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </article>
+  </section>
+  <template id="crud-template">
+    <tr>
+      <td class="name"></td>
+      <td class="posicion"></td>
+      <td>
+        <button class="edit">Editar</button>
+        <button class="delete">Eliminar</button>
+      </td>
+    </tr>
+  </template>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script>
+    /* **********     Curso JavaScript: 119. APIs REST: CRUD con Axios (1/2) - #jonmircha     ********** */
+    /* **********     Curso JavaScript: 120. APIs REST: CRUD con Axios (2/2) - #jonmircha     ********** */
+    const d = document,
+      $table = d.querySelector(".crud-table"),
+      $form = d.querySelector(".crud-form"),
+      $title = d.querySelector(".crud-title"),
+      $template = d.getElementById("crud-template").content,
+      $fragment = d.createDocumentFragment();
 
-        const getAll = async() => {
-            try {
-                let res = await axios.get("http://localhost:5555:jugadores"),
-                json = await res.data;
-                
+    const getAll = async () => {
+      try {
+        let res = await axios.get("http://localhost:5555/jugadores"),
+          json = await res.data;
 
-                json.forEach(el => {
-                $template.querySelector(".nombre").textContent = el.nombre;
-                $template.querySelector(".posicion").textContent = el.posicion;
-                $template.querySelector(".edit").dataset.id = el.id;
-                $template.querySelector(".edit").dataset.nombre = el.nombre;
-                $template.querySelector(".edit").dataset.posicion = el.posicion;
-                $template.querySelector(".delete").dataset.id = el.id;
+        console.log(json);
 
-                let $clone = d.importNode($template, true);
-                $fragment.appendChild($clone);
+        json.forEach(el => {
+          $template.querySelector(".name").textContent = el.nombre;
+          $template.querySelector(".posicion").textContent = el.posicion;
+          $template.querySelector(".edit").dataset.id = el.id;
+          $template.querySelector(".edit").dataset.name = el.nombre;
+          $template.querySelector(".edit").dataset.posicion = el.posicion;
+          $template.querySelector(".delete").dataset.id = el.id;
+
+          let $clone = d.importNode($template, true);
+          $fragment.appendChild($clone);
         });
 
-            } catch (error) {
-                let message = err.statusText || "Ocurrió un error";
-                $table.insertAdjacentHTML("afterend", `<p><b>Error ${err.statusText}: ${message}</b></p>`)
-            }
-        }
+        $table.querySelector("tbody").appendChild($fragment);
+      } catch (err) {
+        let message = err.statusText || "Ocurrió un error";
+        $table.insertAdjacentHTML("afterend", `<p><b>Error ${err.status}: ${message}</b></p>`);
+      }
+    }
 
-        d.addEventListener("DOMContentLoaded", getAll);
-    </script>
+    d.addEventListener("DOMContentLoaded", getAll);
+
+    d.addEventListener("submit", async e => {
+      if (e.target === $form) {
+        e.preventDefault();
+
+        if (!e.target.id.value) {
+          //Create - POST
+          try {
+            let options = {
+              method: "POST",
+              headers: {
+                "Content-type": "application/json; charset=utf-8"
+              },
+              data: JSON.stringify({
+                nombre: e.target.nombre.value,
+                posicion: e.target.posicion.value
+              })
+            },
+              res = await axios("http://localhost:5555/jugadores", options),
+              json = await res.data;
+
+            location.reload();
+          } catch (err) {
+            let message = err.statusText || "Ocurrió un error";
+            $form.insertAdjacentHTML("afterend", `<p><b>Error ${err.status}: ${message}</b></p>`);
+          }
+        } else {
+          //Update - PUT
+          try {
+            let options = {
+              method: "PUT",
+              headers: {
+                "Content-type": "application/json; charset=utf-8"
+              },
+              data: JSON.stringify({
+                nombre: e.target.nombre.value,
+                posicion: e.target.posicion.value
+              })
+            },
+              res = await axios(`http://localhost:5555/jugadores/${e.target.id.value}`, options),
+              json = await res.data;
+
+            location.reload();
+          } catch (err) {
+            let message = err.statusText || "Ocurrió un error";
+            $form.insertAdjacentHTML("afterend", `<p><b>Error ${err.status}: ${message}</b></p>`);
+          }
+        }
+      }
+    });
+
+    d.addEventListener("click", async e => {
+      if (e.target.matches(".edit")) {
+        $title.textContent = "Editar Jugador";
+        $form.nombre.value = e.target.dataset.name;
+        $form.posicion.value = e.target.dataset.posicion;
+        $form.id.value = e.target.dataset.id;
+      }
+
+      if (e.target.matches(".delete")) {
+        let isDelete = confirm(`¿Estás seguro de eliminar el id ${e.target.dataset.id}?`);
+
+        if (isDelete) {
+          //Delete - DELETE
+          try {
+            let options = {
+              method: "DELETE",
+              headers: {
+                "Content-type": "application/json; charset=utf-8"
+              }
+            },
+              res = await axios(`http://localhost:5555/jugadores/${e.target.dataset.id}`, options),
+              json = await res.data;
+
+            location.reload();
+          } catch (err) {
+            let message = err.statusText || "Ocurrió un error";
+            alert(`Error ${err.status}: ${message}`);
+          }
+        }
+      }
+    });
+  </script>
 </body>
+
 </html>
