--- a/spa/index.html
+++ b/spa/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="app/assets/style.css">
 </head>
 <body>
-    <main id="root">
+    <div id="root">
         <script src="index.js" type="module">
 
         </script>
-    </main>
+    </div >
 </body>
 </html>
